--- a/index.html
+++ b/index.html
@@ -1,11 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="utf-8">
         <title>My Personal Website</title>
-        <link rel="stylesheet" href="style.css" >
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="style-to-index.css" >
     </head>
     <body>
-        <h1>Hello World!</h1>
-        <script src="script.js"></script>
+        <div class="nav-container top-bar">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container-fluid">
+                    <h1 class="navbar-brand mariko-color">Mariko Janes</h1>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav ms-auto">
+                            <a class="nav-link active mariko-color" aria-current="page" href="#">Home</a>
+                            <a class="nav-link mariko-color" href="#about-me">About Me</a>
+                            <a class="nav-link mariko-color" href="travelhistory.html">My travel history</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+
+       <div class="top-container">
+            <div class="row">
+                <div class="col-4 offset-2 greeting">
+                    <h1>Hello, I'm Mariko.</h1>
+                    <h2>A student at Flatiron School.</h2>
+                    <a class="btn btn-outline-dark mariko-color btn-color" href="#about-me" role="button">ABOUT ME</a>
+                </div>
+                <div class="col-6">
+                    <img id="profile" src="images/profilephoto.jpg" alt="mariko-photo">
+
+                </div>
+            </div>
+        </div>
+
+       <section id="about-me">
+           <div class="middle-container">
+
+               <div class="container px-4 py-5" id="hanging-icons">
+                   <h2 class="pb-2 border-bottom">ABOUT ME</h2>
+                   <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+                       <div class="col d-flex align-items-start">
+                           <div>
+                               <h2>General Info</h2>
+                               <ul>
+                                   <li class="lists">born and raised in Japan</li>
+                                   <li class="lists">currently living in Colorado</li>
+                                   <li class="lists">starting a coding bootcamp at Flatiron Shcool on April 4th</li>
+                                   <li class="lists">pursuing a career as a Software Engineer</li>
+                                   <li class="lists">Mom of a ragdoll cat</li>
+                               </ul>
+                           </div>
+                       </div>
+                       <div class="col d-flex align-items-start">
+
+                           <div>
+                               <h2>Professional Experiences</h2>
+                               <ul class="lists">
+                                   <li class="lists">Amazon Japan G.K (Chiba, Japan) <br> - Process Assistant <br> April 2021 ~ Decmber 2021</li>
+                                   <li class="lists">Sojitz Pla-Net Corporation(Tokyo, Japan) <br> - Sales <br> April 2019 ~ Agust 2020</li>
+                               </ul>
+                           </div>
+                       </div>
+                       <div class="col d-flex align-items-start">
+                           <div >
+                               <h2>Educations</h2>
+                               <ul class="lists">
+                                   <li class="lists">WASEDA University (Tokyo, Japan) <br> April 2014 ~ March 2019</li>
+                                   <li class="lists">San Francisco State University (San Francisco, CA) <br> June 2017 ~ March 2018</li>
+                               </ul>
+                           </div>
+                       </div>
+                   </div>
+               </div>
+           </div>
+       </section>
+
+
+        <div class="bottom-container">
+           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+               <div class="carousel-inner">
+                   <div class="carousel-item active">
+                       <img src="images/Bell1.JPG" class="d-block bell" alt="Bell Janes">
+                   </div>
+                   <div class="carousel-item">
+                       <img src="images/Bell2.JPG" class="d-block bell" alt="Bell Janes">
+                   </div>
+                   <div class="carousel-item">
+                       <img src="images/Bell3.JPG" class="d-block bell" alt="Bell Janes">
+                   </div>
+               </div>
+               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                   <span class="visually-hidden">Previous</span>
+               </button>
+               <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                   <span class="visually-hidden">Next</span>
+               </button>
+           </div>
+        </div>
+
+
+
+        
+        <footer>
+            <div class="footer">
+                <p>© Mariko Janes</p>
+                 <ul class="footer-link">
+                     <li class="link"><a href="https://www.linkedin.com/in/mariko-janes/"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                     <li class="link"><a href="https://github.com/MarikoJanes"><i class="fa-brands fa-github"></i></a></li>
+                 </ul>
+            </div>
+        </footer>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
     </body>
+    
 </html>
